--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,22 @@ Servers/
 sts06/.settings/
 *.class
 target/
+sts07/src/main/webapp/css/bootstrap.css
+sts07/src/main/webapp/css/bootstrap.css.map
+sts07/src/main/webapp/css/bootstrap.min.css
+sts07/src/main/webapp/css/bootstrap.min.css.map
+sts07/src/main/webapp/css/bootstrap-theme.css
+sts07/src/main/webapp/css/bootstrap-theme.css.map
+sts07/src/main/webapp/css/bootstrap-theme.min.css
+sts07/src/main/webapp/css/bootstrap-theme.min.css.map
+sts07/src/main/webapp/fonts/glyphicons-halflings-regular.eot
+sts07/src/main/webapp/fonts/glyphicons-halflings-regular.svg
+sts07/src/main/webapp/fonts/glyphicons-halflings-regular.ttf
+sts07/src/main/webapp/fonts/glyphicons-halflings-regular.woff
+sts07/src/main/webapp/fonts/glyphicons-halflings-regular.woff2
+sts07/src/main/webapp/js/bootstrap.js
+sts07/src/main/webapp/js/bootstrap.min.js
+sts07/src/main/webapp/js/jquery-1.12.4.js
+sts07/src/main/webapp/js/jquery-1.12.4.min.js
+sts07/src/main/webapp/js/npm.js
+.settings
