--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,35 @@ sts07/src/main/webapp/js/jquery-1.12.4.js
 sts07/src/main/webapp/js/jquery-1.12.4.min.js
 sts07/src/main/webapp/js/npm.js
 .settings
+/resources/
+/webapp/resources/
+sts07/src/main/webapp/resources/css/bootstrap.css
+sts07/src/main/webapp/resources/css/bootstrap.css.map
+sts07/src/main/webapp/resources/css/bootstrap.min.css
+sts07/src/main/webapp/resources/css/bootstrap.min.css.map
+sts07/src/main/webapp/resources/css/bootstrap-theme.css
+sts07/src/main/webapp/resources/css/bootstrap-theme.css.map
+sts07/src/main/webapp/resources/css/bootstrap-theme.min.css
+sts07/src/main/webapp/resources/css/bootstrap-theme.min.css.map
+sts07/src/main/webapp/resources/fonts/glyphicons-halflings-regular.eot
+sts07/src/main/webapp/resources/fonts/glyphicons-halflings-regular.svg
+sts07/src/main/webapp/resources/fonts/glyphicons-halflings-regular.ttf
+sts07/src/main/webapp/resources/fonts/glyphicons-halflings-regular.woff
+sts07/src/main/webapp/resources/fonts/glyphicons-halflings-regular.woff2
+sts07/src/main/webapp/resources/imgs/1.jpg
+sts07/src/main/webapp/resources/imgs/2.jpg
+sts07/src/main/webapp/resources/imgs/3.jpg
+sts07/src/main/webapp/resources/imgs/4.jpg
+sts07/src/main/webapp/resources/imgs/5.jpg
+sts07/src/main/webapp/resources/imgs/6.jpg
+sts07/src/main/webapp/resources/imgs/big1.jpg
+sts07/src/main/webapp/resources/imgs/big2.jpg
+sts07/src/main/webapp/resources/imgs/big3.jpg
+sts07/src/main/webapp/resources/imgs/big4.jpg
+sts07/src/main/webapp/resources/imgs/big5.jpg
+sts07/src/main/webapp/resources/imgs/big6.jpg
+sts07/src/main/webapp/resources/js/bootstrap.js
+sts07/src/main/webapp/resources/js/bootstrap.min.js
+sts07/src/main/webapp/resources/js/jquery-1.12.4.js
+sts07/src/main/webapp/resources/js/jquery-1.12.4.min.js
+sts07/src/main/webapp/resources/js/npm.js
