--- a/sts07/pom.xml
+++ b/sts07/pom.xml
@@ -44,7 +44,6 @@
 		    <version>2.0.8</version>
 		</dependency>
 		
-				
 		<!-- AspectJ -->
 		<dependency>
 			<groupId>org.aspectj</groupId>
@@ -121,6 +120,21 @@
 			<version>1.2</version>
 		</dependency>
 	
+		
+		<!-- user add -->
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<dependency>
+		    <groupId>mysql</groupId>
+		    <artifactId>mysql-connector-java</artifactId>
+		    <version>5.1.48</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/commons-dbcp/commons-dbcp -->
+		<dependency>
+		    <groupId>commons-dbcp</groupId>
+		    <artifactId>commons-dbcp</artifactId>
+		    <version>1.4</version>
+		</dependency>
+				
 		<!-- Test -->
 		<dependency>
 			<groupId>junit</groupId>
