--- a/sts07/pom.xml
+++ b/sts07/pom.xml
@@ -38,10 +38,22 @@
 			<version>${org.springframework-version}</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.springframework/spring-ibatis -->
-		<dependency>
+	<!-- 	<dependency>
 		    <groupId>org.springframework</groupId>
 		    <artifactId>spring-ibatis</artifactId>
 		    <version>2.0.8</version>
+		</dependency> -->
+		<!-- https://mvnrepository.com/artifact/org.mybatis/mybatis-spring -->
+		<dependency>
+		    <groupId>org.mybatis</groupId>
+		    <artifactId>mybatis-spring</artifactId>
+		    <version>2.0.3</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.mybatis/mybatis -->
+		<dependency>
+		    <groupId>org.mybatis</groupId>
+		    <artifactId>mybatis</artifactId>
+		    <version>3.4.6</version>
 		</dependency>
 		
 		<!-- AspectJ -->
