--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,33 @@ sts07/src/main/webapp/resources/js/bootstrap.min.js
 sts07/src/main/webapp/resources/js/jquery-1.12.4.js
 sts07/src/main/webapp/resources/js/jquery-1.12.4.min.js
 sts07/src/main/webapp/resources/js/npm.js
+sts08/src/main/webapp/css/bootstrap.css
+sts08/src/main/webapp/css/bootstrap.css.map
+sts08/src/main/webapp/css/bootstrap.min.css
+sts08/src/main/webapp/css/bootstrap.min.css.map
+sts08/src/main/webapp/css/bootstrap-theme.css
+sts08/src/main/webapp/css/bootstrap-theme.css.map
+sts08/src/main/webapp/css/bootstrap-theme.min.css
+sts08/src/main/webapp/css/bootstrap-theme.min.css.map
+sts08/src/main/webapp/fonts/glyphicons-halflings-regular.eot
+sts08/src/main/webapp/fonts/glyphicons-halflings-regular.svg
+sts08/src/main/webapp/fonts/glyphicons-halflings-regular.ttf
+sts08/src/main/webapp/fonts/glyphicons-halflings-regular.woff
+sts08/src/main/webapp/fonts/glyphicons-halflings-regular.woff2
+sts08/src/main/webapp/imgs/1.jpg
+sts08/src/main/webapp/imgs/2.jpg
+sts08/src/main/webapp/imgs/3.jpg
+sts08/src/main/webapp/imgs/4.jpg
+sts08/src/main/webapp/imgs/5.jpg
+sts08/src/main/webapp/imgs/6.jpg
+sts08/src/main/webapp/imgs/big1.jpg
+sts08/src/main/webapp/imgs/big2.jpg
+sts08/src/main/webapp/imgs/big3.jpg
+sts08/src/main/webapp/imgs/big4.jpg
+sts08/src/main/webapp/imgs/big5.jpg
+sts08/src/main/webapp/imgs/big6.jpg
+sts08/src/main/webapp/js/bootstrap.js
+sts08/src/main/webapp/js/bootstrap.min.js
+sts08/src/main/webapp/js/jquery-1.12.4.js
+sts08/src/main/webapp/js/jquery-1.12.4.min.js
+sts08/src/main/webapp/js/npm.js
