--- a/sts12/pom.xml
+++ b/sts12/pom.xml
@@ -128,7 +128,9 @@
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
 			<scope>test</scope>
-		</dependency>        
+		</dependency>   
+		<!-- user add libs -->
+		     
 	</dependencies>
     <build>
         <plugins>
